translation added in setting and other screen

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,3 +1,364 @@
 {
-  
+    "common": {
+        "save": "Save",
+        "cancel": "Cancel",
+        "delete": "Delete",
+        "edit": "Edit",
+        "done": "Done",
+        "next": "Next",
+        "skip": "Skip",
+        "back": "Back",
+        "confirm": "Confirm",
+        "loading": "Loading...",
+        "error": "Error",
+        "success": "Success",
+        "search": "Search",
+        "filter": "Filter",
+        "sort": "Sort",
+        "apply": "Apply",
+        "reset": "Reset",
+        "close": "Close",
+        "submit": "Submit",
+        "yes": "Yes",
+        "no": "No"
+    },
+    "auth": {
+        "welcome": "Welcome to HisaabBee",
+        "subtitle": "Manage your finances smartly",
+        "appName": "HisaabBee",
+        "login": "Login",
+        "signIn": "Sign In",
+        "signUp": "Sign Up",
+        "email": "Email",
+        "password": "Password",
+        "confirmPassword": "Confirm Password",
+        "forgotPassword": "Forgot Password?",
+        "dontHaveAccount": "Don't have an account?",
+        "alreadyHaveAccount": "Already have an account?",
+        "signInWithGoogle": "Sign in with Google",
+        "signInWithApple": "Sign in with Apple",
+        "orContinueWith": "Or continue with",
+        "emailPlaceholder": "Enter your email",
+        "passwordPlaceholder": "Enter your password",
+        "createAccount": "Create Account",
+        "agreeToTerms": "I agree to the Terms & Conditions",
+        "loginSuccess": "Login successful!",
+        "signupSuccess": "Account created successfully!",
+        "fullName": "Full Name",
+        "fullNamePlaceholder": "John Doe",
+        "nameRequired": "Name is required",
+        "emailRequired": "Email is required",
+        "invalidEmail": "Invalid email address",
+        "passwordRequired": "Password is required",
+        "passwordMinLength": "Password must be at least 6 characters",
+        "termsPrivacy": "By continuing, you agree to our Terms & Privacy Policy",
+        "google": "Google",
+        "apple": "Apple"
+    },
+    "onboarding": {
+        "title1": "Track Your Expenses",
+        "description1": "Keep track of all your expenses in one place with ease",
+        "title2": "Smart Budgeting",
+        "description2": "Set budgets and get AI-powered insights to save more",
+        "title3": "Manage Multiple Wallets",
+        "description3": "Handle cash, cards, and digital wallets all in one place with easy transfers",
+        "title4": "AI-Powered Insights",
+        "description4": "Meet SmartSense™ - your personal AI financial assistant that helps you save smarter",
+        "getStarted": "Get Started",
+        "skip": "Skip"
+    },
+    "dashboard": {
+        "title": "Dashboard",
+        "welcomeBack": "Welcome back",
+        "userName": "Alex Johnson",
+        "totalBalance": "Total Balance",
+        "income": "Income",
+        "expenses": "Expenses",
+        "savings": "Savings",
+        "recentTransactions": "Recent Transactions",
+        "viewAll": "View All",
+        "quickActions": "Quick Actions",
+        "addExpense": "Add Expense",
+        "addIncome": "Add Income",
+        "viewBudget": "View Budget",
+        "analytics": "Analytics",
+        "thisMonth": "This Month",
+        "lastMonth": "Last Month",
+        "todaySpending": "Today's Spending",
+        "weeklySpending": "Weekly Spending",
+        "spendingOverview": "Spending Overview",
+        "seeAll": "See All",
+        "noExpensesYet": "No expenses yet",
+        "smartSenseInsight": "SmartSense™ Insight",
+        "viewFullAnalysis": "View Full Analysis →",
+        "recentInsight": "You're spending 23% more on food this week. Consider meal prepping to save $50/week.",
+        "wallets": "Wallets",
+        "budget": "Budget"
+    },
+    "transactions": {
+        "title": "Transactions",
+        "all": "All",
+        "income": "Income",
+        "expenses": "Expenses",
+        "today": "Today",
+        "yesterday": "Yesterday",
+        "thisWeek": "This Week",
+        "thisMonth": "This Month",
+        "amount": "Amount",
+        "category": "Category",
+        "date": "Date",
+        "description": "Description",
+        "noTransactions": "No transactions found",
+        "addTransaction": "Add Transaction",
+        "editTransaction": "Edit Transaction",
+        "deleteTransaction": "Delete Transaction",
+        "filterByCategory": "Filter by Category",
+        "sortBy": "Sort By",
+        "searchTransactions": "Search transactions..."
+    },
+    "addExpense": {
+        "title": "Add Expense",
+        "editTitle": "Edit Expense",
+        "amount": "Amount",
+        "category": "Category",
+        "description": "Description",
+        "date": "Date",
+        "selectCategory": "Select Category",
+        "enterAmount": "Enter amount",
+        "enterDescription": "Enter description",
+        "saveExpense": "Save Expense",
+        "expenseAdded": "Expense added successfully!",
+        "expenseUpdated": "Expense updated successfully!",
+        "pleaseEnterAmount": "Please enter an amount",
+        "pleaseSelectCategory": "Please select a category",
+        "recurring": "Recurring",
+        "oneTime": "One Time",
+        "paymentMode": "Payment Mode",
+        "cash": "Cash",
+        "bank": "Bank",
+        "card": "Card",
+        "wallet": "Wallet",
+        "descriptionRequired": "Description is required",
+        "descriptionPlaceholder": "e.g., Lunch at Cafe",
+        "notesOptional": "Notes (Optional)",
+        "notesPlaceholder": "Add any additional notes...",
+        "tagsOptional": "Tags (Optional)",
+        "tagsPlaceholder": "e.g., work, lunch, coffee",
+        "receiptOptional": "Receipt (Optional)",
+        "uploadReceipt": "Upload Receipt",
+        "recurringExpense": "Recurring Expense",
+        "recurringDescription": "Set this expense to repeat automatically"
+    },
+    "categories": {
+        "food": "Food",
+        "transport": "Transport",
+        "shopping": "Shopping",
+        "entertainment": "Entertainment",
+        "utilities": "Utilities",
+        "healthcare": "Healthcare",
+        "education": "Education",
+        "salary": "Salary",
+        "business": "Business",
+        "investment": "Investment",
+        "other": "Other",
+        "groceries": "Groceries",
+        "rent": "Rent",
+        "bills": "Bills"
+    },
+    "budget": {
+        "title": "Budget",
+        "manager": "Budget Manager",
+        "totalBudget": "Total Budget",
+        "spent": "Spent",
+        "remaining": "Remaining",
+        "setBudget": "Set Budget",
+        "editBudget": "Edit Budget",
+        "monthlyBudget": "Monthly Budget",
+        "categoryBudgets": "Category Budgets",
+        "budgetLimit": "Budget Limit",
+        "currentSpending": "Current Spending",
+        "onTrack": "On Track",
+        "warning": "Warning",
+        "exceeded": "Exceeded",
+        "budgetExceeded": "Budget Exceeded!",
+        "budgetWarning": "You're close to your budget limit",
+        "saveBudget": "Save Budget",
+        "budgetSaved": "Budget saved successfully!",
+        "newBudget": "New Budget",
+        "remainingThisMonth": "remaining this month",
+        "smartSenseSuggestion": "SmartSense™ Suggestion",
+        "onTrackToSave": "You're on track to save $200 this month! Consider reducing Shopping by $50 to increase savings.",
+        "categories": "Categories",
+        "viewTrends": "View Trends",
+        "of": "of",
+        "used": "used",
+        "left": "left",
+        "over": "over",
+        "nearLimit": "Near Limit",
+        "monthlySavingsGoal": "Monthly Savings Goal",
+        "saveThisMonth": "Save $500 this month",
+        "saved": "saved",
+        "toGo": "to go"
+    },
+    "analytics": {
+        "title": "Analytics",
+        "spendingTrends": "Spending Trends",
+        "categoryBreakdown": "Category Breakdown",
+        "monthlyComparison": "Monthly Comparison",
+        "topCategories": "Top Categories",
+        "insights": "Insights",
+        "thisMonth": "This Month",
+        "lastMonth": "Last Month",
+        "last3Months": "Last 3 Months",
+        "last6Months": "Last 6 Months",
+        "yearToDate": "Year to Date",
+        "exportReport": "Export Report",
+        "viewDetails": "View Details",
+        "totalSpent": "Total Spent",
+        "averageDaily": "Average Daily",
+        "avgDaily": "Avg. Daily",
+        "highestCategory": "Highest Category",
+        "vsLastMonth": "vs last month",
+        "incomeVsExpenses": "Income vs Expenses"
+    },
+    "wallets": {
+        "title": "Wallets",
+        "walletsAndAccounts": "Wallets & Accounts",
+        "addWallet": "Add Wallet",
+        "add": "Add",
+        "editWallet": "Edit Wallet",
+        "walletName": "Wallet Name",
+        "balance": "Balance",
+        "totalBalance": "Total Balance",
+        "cash": "Cash",
+        "bank": "Bank Account",
+        "creditCard": "Credit Card",
+        "savings": "Savings",
+        "deleteWallet": "Delete Wallet",
+        "walletAdded": "Wallet added successfully!",
+        "walletUpdated": "Wallet updated successfully!",
+        "selectWallet": "Select Wallet",
+        "noWallets": "No wallets found",
+        "accounts": "Accounts",
+        "transferBetweenAccounts": "Transfer Between Accounts",
+        "recentTransfers": "Recent Transfers",
+        "to": "to",
+        "today": "Today",
+        "yesterday": "Yesterday",
+        "thisMonthIncome": "This Month"
+    },
+    "smartSense": {
+        "title": "SmartSense™",
+        "subtitle": "AI-powered financial insights and personalized recommendations",
+        "aiInsights": "AI Insights",
+        "smartInsights": "Smart Insights",
+        "recommendations": "Recommendations",
+        "savingTips": "Saving Tips",
+        "spendingPatterns": "Spending Patterns",
+        "predictedExpenses": "Predicted Expenses",
+        "askAI": "Ask AI",
+        "aiSuggests": "AI Suggests",
+        "basedOnYourSpending": "Based on your spending patterns",
+        "potentialSavings": "Potential Savings",
+        "implementSuggestion": "Implement Suggestion",
+        "viewMore": "View More",
+        "spendingAlert": "Spending Alert",
+        "greatProgress": "Great Progress!",
+        "budgetRecommendation": "Budget Recommendation",
+        "highImpact": "High Impact",
+        "positive": "Positive",
+        "mediumImpact": "Medium Impact",
+        "nextMonthPredictions": "Next Month Predictions",
+        "predicted": "Predicted",
+        "suggestedSavingsGoal": "Suggested Savings Goal",
+        "savingsGoalDescription": "Based on your spending patterns, you could save $500 in the next 3 months by optimizing your food and entertainment expenses.",
+        "setThisGoal": "Set This Goal"
+    },
+    "settings": {
+        "title": "Settings",
+        "account": "Account",
+        "preferences": "Preferences",
+        "support": "Support",
+        "profileSettings": "Profile Settings",
+        "notifications": "Notifications",
+        "security": "Security",
+        "manageAccounts": "Manage Accounts",
+        "exportData": "Export Data",
+        "helpSupport": "Help & Support",
+        "smartSenseSettings": "SmartSense™ Settings",
+        "darkMode": "Dark Mode",
+        "switchThemes": "Switch between light and dark themes",
+        "language": "Language",
+        "changeLanguage": "Change app language",
+        "aiInsights": "AI Insights",
+        "personalizedAdvice": "Get personalized financial advice",
+        "pushNotifications": "Push Notifications",
+        "receiveUpdates": "Receive updates and alerts",
+        "logOut": "Log Out",
+        "version": "Version"
+    },
+    "profile": {
+        "title": "Profile",
+        "editProfile": "Edit Profile",
+        "name": "Name",
+        "email": "Email",
+        "phone": "Phone",
+        "currency": "Currency",
+        "dateFormat": "Date Format",
+        "profileUpdated": "Profile updated successfully!",
+        "changePhoto": "Change Photo",
+        "personalInfo": "Personal Information",
+        "accountSettings": "Account Settings"
+    },
+    "security": {
+        "title": "Security",
+        "changePassword": "Change Password",
+        "currentPassword": "Current Password",
+        "newPassword": "New Password",
+        "confirmNewPassword": "Confirm New Password",
+        "twoFactorAuth": "Two-Factor Authentication",
+        "biometricAuth": "Biometric Authentication",
+        "faceID": "Face ID",
+        "fingerprint": "Fingerprint",
+        "passwordUpdated": "Password updated successfully!",
+        "enableBiometric": "Enable biometric authentication",
+        "securitySettings": "Security Settings"
+    },
+    "notifications": {
+        "title": "Notifications",
+        "newNotifications": "New Notifications",
+        "markAllRead": "Mark All as Read",
+        "budgetAlert": "Budget Alert",
+        "transactionAlert": "Transaction Alert",
+        "reminderAlert": "Reminder",
+        "noNotifications": "No notifications",
+        "clearAll": "Clear All"
+    },
+    "helpSupport": {
+        "title": "Help & Support",
+        "faq": "Frequently Asked Questions",
+        "contactUs": "Contact Us",
+        "reportBug": "Report a Bug",
+        "featureRequest": "Feature Request",
+        "documentation": "Documentation",
+        "sendFeedback": "Send Feedback",
+        "feedbackSent": "Feedback sent successfully!",
+        "emailSupport": "Email Support",
+        "chatSupport": "Chat Support"
+    },
+    "errors": {
+        "networkError": "Network error. Please check your connection.",
+        "serverError": "Server error. Please try again later.",
+        "invalidEmail": "Please enter a valid email address",
+        "invalidPassword": "Password must be at least 6 characters",
+        "passwordMismatch": "Passwords do not match",
+        "requiredField": "This field is required",
+        "invalidAmount": "Please enter a valid amount",
+        "somethingWentWrong": "Something went wrong. Please try again."
+    },
+    "success": {
+        "changesSaved": "Changes saved successfully!",
+        "dataSynced": "Data synced successfully!",
+        "exportComplete": "Export completed successfully!"
+    }
 }
