--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -165,6 +165,24 @@
         "rent": "Rent",
         "bills": "Bills"
     },
+    "categoryManager": {
+        "title": "Categories",
+        "newCategory": "New Category",
+        "categoryName": "Category Name",
+        "selectIcon": "Select Icon",
+        "selectColor": "Select Color",
+        "tags": "Tags",
+        "addTag": "Add a tag...",
+        "noCategories": "No categories found. Add one!",
+        "deleteConfirmTitle": "Delete Category",
+        "deleteConfirmMessage": "Are you sure you want to delete this category?",
+        "manage": "Manage"
+    },
+    "filter": {
+        "title": "Filter Transactions",
+        "transactionType": "Transaction Type",
+        "applyFilters": "Apply Filters"
+    },
     "budget": {
         "title": "Budget",
         "manager": "Budget Manager",
