Tag and Calender screen added

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -8,6 +8,7 @@
         "next": "Next",
         "skip": "Skip",
         "back": "Back",
+        "goBack": "Go Back",
         "confirm": "Confirm",
         "loading": "Loading...",
         "error": "Error",
@@ -181,7 +182,58 @@
     "filter": {
         "title": "Filter Transactions",
         "transactionType": "Transaction Type",
-        "applyFilters": "Apply Filters"
+        "applyFilters": "Apply Filters",
+        "dateRange": "Date Range",
+        "today": "Today",
+        "thisWeek": "This Week",
+        "thisMonth": "This Month",
+        "thisYear": "This Year",
+        "allTime": "All Time",
+        "custom": "Custom Range",
+        "tags": "Tags"
+    },
+    "tags": {
+        "title": "Tags",
+        "description": "Create tags to organize your transactions",
+        "add": "Add",
+        "addNew": "Add New Tag",
+        "editTag": "Edit Tag",
+        "name": "Tag Name",
+        "namePlaceholder": "e.g., Business",
+        "color": "Color",
+        "save": "Save",
+        "cancel": "Cancel",
+        "yourTags": "Your Tags",
+        "total": "Total",
+        "noTags": "No tags created yet",
+        "createFirst": "Create Your First Tag",
+        "suggested": "Suggested Tags",
+        "tip": "Tip",
+        "tipDescription": "Tags help you filter and analyze expenses across different categories. Use them to track project-specific spending or personal goals."
+    },
+    "calendar": {
+        "title": "Calendar",
+        "description": "View your transactions by date",
+        "income": "Income",
+        "expenses": "Expenses",
+        "net": "Net",
+        "addTransaction": "Add Transaction",
+        "transactions": "Transactions",
+        "noTransactions": "No transactions on this date",
+        "selectDate": "Select a date to view transactions"
+    },
+    "transactionDetail": {
+        "title": "Transaction Details",
+        "notFound": "Transaction not found",
+        "category": "Category",
+        "date": "Date",
+        "time": "Time",
+        "payment": "Payment Method",
+        "recurring": "Recurring",
+        "monthly": "Monthly",
+        "tags": "Tags",
+        "location": "Location",
+        "note": "Note"
     },
     "budget": {
         "title": "Budget",
