--- a/src/i18n/locales/ur.json
+++ b/src/i18n/locales/ur.json
@@ -8,6 +8,7 @@
         "next": "اگلا",
         "skip": "چھوڑیں",
         "back": "واپس",
+        "goBack": "واپس جائیں",
         "confirm": "تصدیق کریں",
         "loading": "لوڈ ہو رہا ہے...",
         "error": "خرابی",
@@ -181,7 +182,58 @@
     "filter": {
         "title": "لین دین کو فلٹر کریں",
         "transactionType": "لین دین کی قسم",
-        "applyFilters": "فلٹرز لاگو کریں"
+        "applyFilters": "فلٹرز لاگو کریں",
+        "dateRange": "تاریخ کی حد",
+        "today": "آج",
+        "thisWeek": "اس ہفتے",
+        "thisMonth": "اس مہینے",
+        "thisYear": "اس سال",
+        "allTime": "تمام وقت",
+        "custom": "حسب ضرورت",
+        "tags": "ٹیگز"
+    },
+    "tags": {
+        "title": "ٹیگز",
+        "description": "اپنے لین دین کو منظم کرنے کے لیے ٹیگز بنائیں",
+        "add": "شامل کریں",
+        "addNew": "نیا ٹیگ شامل کریں",
+        "editTag": "ٹیگ میں ترمیم کریں",
+        "name": "ٹیگ کا نام",
+        "namePlaceholder": "مثال: کاروبار",
+        "color": "رنگ",
+        "save": "محفوظ کریں",
+        "cancel": "منسوخ کریں",
+        "yourTags": "آپ کے ٹیگز",
+        "total": "کل",
+        "noTags": "ابھی تک کوئی ٹیگ نہیں بنایا گیا",
+        "createFirst": "اپنا پہلا ٹیگ بنائیں",
+        "suggested": "تجویز کردہ ٹیگز",
+        "tip": "مشورہ",
+        "tipDescription": "ٹیگز مختلف زمروں میں اخراجات کو فلٹر اور تجزیہ کرنے میں مدد کرتے ہیں۔ پروجیکٹ کے مخصوص اخراجات یا ذاتی اہداف کو ٹریک کرنے کے لیے ان کا استعمال کریں۔"
+    },
+    "calendar": {
+        "title": "کیلنڈر",
+        "description": "تاریخ کے مطابق اپنے لین دین دیکھیں",
+        "income": "آمدنی",
+        "expenses": "اخراجات",
+        "net": "خالص",
+        "addTransaction": "لین دین شامل کریں",
+        "transactions": "لین دین",
+        "noTransactions": "اس تاریخ پر کوئی لین دین نہیں",
+        "selectDate": "لین دین دیکھنے کے لیے تاریخ منتخب کریں"
+    },
+    "transactionDetail": {
+        "title": "لین دین کی تفصیلات",
+        "notFound": "لین دین نہیں ملا",
+        "category": "زمرہ",
+        "date": "تاریخ",
+        "time": "وقت",
+        "payment": "ادائیگی کا طریقہ",
+        "recurring": "بار بار آنے والا",
+        "monthly": "ماہانہ",
+        "tags": "ٹیگز",
+        "location": "مقام",
+        "note": "نوٹ"
     },
     "budget": {
         "title": "بجٹ",
