--- a/src/i18n/locales/ur.json
+++ b/src/i18n/locales/ur.json
@@ -21,7 +21,8 @@
         "close": "بند کریں",
         "submit": "جمع کرائیں",
         "yes": "ہاں",
-        "no": "نہیں"
+        "no": "نہیں",
+        "others": "دیگر"
     },
     "auth": {
         "welcome": "حساب بی میں خوش آمدید",
@@ -190,7 +191,9 @@
         "thisYear": "اس سال",
         "allTime": "تمام وقت",
         "custom": "حسب ضرورت",
-        "tags": "ٹیگز"
+        "tags": "ٹیگز",
+        "allCategories": "تمام زمرے",
+        "allTags": "تمام ٹیگز"
     },
     "tags": {
         "title": "ٹیگز",
