feat: Introduce comprehensive wallet management with detail views, statements, and transfer functionality.

--- a/src/i18n/locales/ur.json
+++ b/src/i18n/locales/ur.json
@@ -297,6 +297,28 @@
     "wallets": {
         "title": "والیٹس",
         "walletsAndAccounts": "والیٹس اور اکاؤنٹس",
+        "currentBalance": "موجودہ بیلنس",
+        "transfer": "رقم منتقل کریں",
+        "transferMoney": "رقم منتقل کریں",
+        "balanceTrend": "بیلنس کا رجحان",
+        "income": "آمدنی",
+        "expense": "اخراجات",
+        "transactions": "لین دین",
+        "viewAll": "سب دیکھیں",
+        "shareDetails": "تفصیلات شیئر کریں",
+        "downloadStatement": "اسٹیٹمنٹ ڈاؤن لوڈ کریں",
+        "statement": "اکاؤنٹ اسٹیٹمنٹ",
+        "openingBalance": "افتتاحی بیلنس",
+        "closingBalance": "اختتامی بیلنس",
+        "runningBalance": "چلتا ہوا بیلنس",
+        "totalIncome": "کل آمدنی",
+        "totalExpense": "کل اخراجات",
+        "generatedOn": "تیار کردہ تاریخ",
+        "statementSummary": "اسٹیٹمنٹ کا خلاصہ",
+        "downloadStarted": "ڈاؤن لوڈ شروع ہوا",
+        "downloadDesc": "آپ کا {format} اسٹیٹمنٹ تیار کیا جا رہا ہے",
+        "shareStatement": "اسٹیٹمنٹ شیئر کریں",
+        "shareStatementDesc": "اسٹیٹمنٹ کا لنک کلپ بورڈ پر کاپی ہو گیا",
         "addWallet": "والیٹ شامل کریں",
         "add": "شامل کریں",
         "editWallet": "والیٹ میں ترمیم کریں",
@@ -315,10 +337,47 @@
         "accounts": "اکاؤنٹس",
         "transferBetweenAccounts": "اکاؤنٹس کے درمیان منتقلی",
         "recentTransfers": "حالیہ منتقلیاں",
-        "to": "کو",
         "today": "آج",
         "yesterday": "کل",
-        "thisMonthIncome": "اس مہینے"
+        "thisMonthIncome": "اس مہینے",
+        "types": {
+            "cash": "نقد",
+            "bank": "بینک",
+            "card": "کارڈ",
+            "digital": "ڈیجیٹل",
+            "crypto": "کرپٹو",
+            "savings": "بچت"
+        },
+        "adjustBalance": "بیلنس ایڈجسٹ کریں",
+        "comingSoon": "جلد آرہا ہے",
+        "balanceAdjustmentFeature": "بیلنس ایڈجسٹمنٹ کی خصوصیت",
+        "insufficientBalance": "ناکافی بیلنس",
+        "available": "دستیاب",
+        "selectBothWallets": "براہ کرم دونوں والیٹس منتخب کریں",
+        "sameWalletError": "ماخذ اور منزل ایک جیسے نہیں ہو سکتے",
+        "enterValidAmount": "براہ کرم ایک درست رقم درج کریں",
+        "transferred": "منتقل کر دیا گیا",
+        "recurringTransfer": "بار بار منتقل کریں",
+        "recurringDesc": "اس منتقلی کو خود بخود دہرائیں",
+        "fillRequired": "براہ کرم تمام مطلوبہ خانے پُر کریں",
+        "addedSuccess": "والیٹ کامیابی سے شامل کر لیا گیا!",
+        "updatedSuccess": "والیٹ کامیابی سے اپ ڈیٹ ہو گیا!",
+        "deletedSuccess": "والیٹ کامیابی سے حذف ہو گیا!",
+        "deleteConfirm": "کیا آپ واقعی اس والیٹ کو حذف کرنا چاہتے ہیں؟",
+        "selectType": "قسم منتخب کریں",
+        "name": "نام",
+        "accountNumber": "اکاؤنٹ نمبر",
+        "includeInTotal": "کل میں شامل کریں",
+        "includeDesc": "اس والیٹ کا بیلنس کل میں شامل کریں",
+        "setAsDefault": "ڈیفالٹ کے طور پر سیٹ کریں",
+        "defaultDesc": "اسے ڈیفالٹ والیٹ بنائیں",
+        "note": "نوٹ",
+        "noteHint": "ایک نوٹ شامل کریں...",
+        "from": "سے",
+        "to": "کو",
+        "amount": "رقم",
+        "initialBalance": "ابتدائی بیلنس",
+        "currency": "کرنسی"
     },
     "smartSense": {
         "title": "سمارٹ سینس™",
