--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -297,6 +297,28 @@
     "wallets": {
         "title": "Wallets",
         "walletsAndAccounts": "Wallets & Accounts",
+        "currentBalance": "Current Balance",
+        "transfer": "Transfer",
+        "transferMoney": "Transfer Money",
+        "balanceTrend": "Balance Trend",
+        "income": "Income",
+        "expense": "Expense",
+        "transactions": "Transactions",
+        "viewAll": "View All",
+        "shareDetails": "Share Details",
+        "downloadStatement": "Download Statement",
+        "statement": "Account Statement",
+        "openingBalance": "Opening Balance",
+        "closingBalance": "Closing Balance",
+        "runningBalance": "Running Balance",
+        "totalIncome": "Total Income",
+        "totalExpense": "Total Expense",
+        "generatedOn": "Generated on",
+        "statementSummary": "Statement Summary",
+        "downloadStarted": "Download Started",
+        "downloadDesc": "Your {format} statement is being prepared",
+        "shareStatement": "Share Statement",
+        "shareStatementDesc": "Statement link copied to clipboard",
         "addWallet": "Add Wallet",
         "add": "Add",
         "editWallet": "Edit Wallet",
@@ -315,10 +337,47 @@
         "accounts": "Accounts",
         "transferBetweenAccounts": "Transfer Between Accounts",
         "recentTransfers": "Recent Transfers",
-        "to": "to",
         "today": "Today",
         "yesterday": "Yesterday",
-        "thisMonthIncome": "This Month"
+        "thisMonthIncome": "This Month",
+        "types": {
+            "cash": "Cash",
+            "bank": "Bank",
+            "card": "Card",
+            "digital": "Digital",
+            "crypto": "Crypto",
+            "savings": "Savings"
+        },
+        "adjustBalance": "Adjust Balance",
+        "comingSoon": "Coming Soon",
+        "balanceAdjustmentFeature": "Balance adjustment feature",
+        "insufficientBalance": "Insufficient Balance",
+        "available": "Available",
+        "selectBothWallets": "Please select both wallets",
+        "sameWalletError": "Source and destination cannot be the same",
+        "enterValidAmount": "Please enter a valid amount",
+        "transferred": "transferred",
+        "recurringTransfer": "Recurring Transfer",
+        "recurringDesc": "Repeat this transfer automatically",
+        "fillRequired": "Please fill all required fields",
+        "addedSuccess": "Wallet added successfully!",
+        "updatedSuccess": "Wallet updated successfully!",
+        "deletedSuccess": "Wallet deleted successfully!",
+        "deleteConfirm": "Are you sure you want to delete this wallet?",
+        "selectType": "Select Type",
+        "name": "Name",
+        "accountNumber": "Account Number",
+        "includeInTotal": "Include in Total",
+        "includeDesc": "Include this wallet's balance in total",
+        "setAsDefault": "Set as Default",
+        "defaultDesc": "Make this the default wallet",
+        "note": "Note",
+        "noteHint": "Add a note...",
+        "from": "From",
+        "to": "To",
+        "amount": "Amount",
+        "initialBalance": "Initial Balance",
+        "currency": "Currency"
     },
     "smartSense": {
         "title": "SmartSense™",
