Refactored settings header and added new sections

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -411,6 +411,8 @@
         "account": "Account",
         "preferences": "Preferences",
         "support": "Support",
+        "categories": "Categories",
+        "tags": "Tags",
         "profileSettings": "Profile Settings",
         "notifications": "Notifications",
         "security": "Security",
