--- a/src/i18n/locales/ur.json
+++ b/src/i18n/locales/ur.json
@@ -411,6 +411,8 @@
         "account": "اکاؤنٹ",
         "preferences": "ترجیحات",
         "support": "مدد",
+        "categories": "زمرہ",
+        "tags": "ٹیگس",
         "profileSettings": "پروفائل کی ترتیبات",
         "notifications": "اطلاعات",
         "security": "سیکیورٹی",
