--- a/src/i18n/locales/ur.json
+++ b/src/i18n/locales/ur.json
@@ -1,5 +1,6 @@
 {
     "common": {
+        "update": "اپ ڈیٹ کریں",
         "save": "محفوظ کریں",
         "cancel": "منسوخ کریں",
         "delete": "حذف کریں",
@@ -55,7 +56,9 @@
         "passwordMinLength": "پاس ورڈ کم از کم 6 حروف کا ہونا چاہیے",
         "termsPrivacy": "جاری رکھ کر، آپ ہماری شرائط اور رازداری کی پالیسی سے اتفاق کرتے ہیں",
         "google": "گوگل",
-        "apple": "ایپل"
+        "apple": "ایپل",
+        "logOut": "لوگ آٹ",
+        "logOutMessage": "آپ کوئی اس کو حذف کرنا چاہتے ہیں؟"
     },
     "onboarding": {
         "title1": "اپنے اخراجات کو ٹریک کریں",
@@ -173,12 +176,14 @@
         "categoryName": "زمرہ کا نام",
         "selectIcon": "آئیکن منتخب کریں",
         "selectColor": "رنگ منتخب کریں",
-        "tags": "ٹیگز",
-        "addTag": "ٹیگ شامل کریں...",
         "noCategories": "کوئی زمرہ نہیں ملا۔ ایک شامل کریں!",
         "deleteConfirmTitle": "زمرہ حذف کریں",
         "deleteConfirmMessage": "کیا آپ واقعی اس زمرے کو حذف کرنا چاہتے ہیں؟",
-        "manage": "انتظام کریں"
+        "manage": "انتظام کریں",
+        "editCategory": "زمرہ میں ترمیم کریں",
+        "namePlaceholder": "مثال: گروسری",
+        "changeColor": "رنگ تبدیل کریں",
+        "nameRequired": "زمرہ کا نام درکار ہے"
     },
     "filter": {
         "title": "لین دین کو فلٹر کریں",
@@ -212,7 +217,11 @@
         "createFirst": "اپنا پہلا ٹیگ بنائیں",
         "suggested": "تجویز کردہ ٹیگز",
         "tip": "مشورہ",
-        "tipDescription": "ٹیگز مختلف زمروں میں اخراجات کو فلٹر اور تجزیہ کرنے میں مدد کرتے ہیں۔ پروجیکٹ کے مخصوص اخراجات یا ذاتی اہداف کو ٹریک کرنے کے لیے ان کا استعمال کریں۔"
+        "tipDescription": "ٹیگز مختلف زمروں میں اخراجات کو فلٹر اور تجزیہ کرنے میں مدد کرتے ہیں۔ پروجیکٹ کے مخصوص اخراجات یا ذاتی اہداف کو ٹریک کرنے کے لیے ان کا استعمال کریں۔",
+        "nameRequired": "ٹیگ کا نام درکار ہے",
+        "selectColor": "رنگ منتخب کریں",
+        "deleteConfirmTitle": "ٹیگ حذف کریں",
+        "deleteConfirmMessage": "کیا آپ واقعی اس ٹیگ کو حذف کرنا چاہتے ہیں؟"
     },
     "calendar": {
         "title": "کیلنڈر",
