--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,6 +4,7 @@
         "save": "Save",
         "cancel": "Cancel",
         "delete": "Delete",
+        "remove": "Remove",
         "edit": "Edit",
         "done": "Done",
         "next": "Next",
@@ -172,7 +173,7 @@
     },
     "categoryManager": {
         "title": "Categories",
-        "newCategory": "New Category",
+        "newCategory": "New Category - {{type}}",
         "categoryName": "Category Name",
         "selectIcon": "Select Icon",
         "selectColor": "Select Color",
@@ -180,10 +181,14 @@
         "deleteConfirmTitle": "Delete Category",
         "deleteConfirmMessage": "Are you sure you want to delete this category?",
         "manage": "Manage",
-        "editCategory": "Edit Category",
+        "editCategory": "Edit Category - {{type}}",
         "namePlaceholder": "e.g., Groceries",
         "changeColor": "Change Color",
-        "nameRequired": "Category name is required"
+        "nameRequired": "Category name is required",
+        "removeTitle": "Remove Category",
+        "removeMessage": "This will remove this category from your list.",
+        "suggestedCategories": "Suggested Categories",
+        "systemCategoryNote": "System category names cannot be changed"
     },
     "filter": {
         "title": "Filter Transactions",
