App setting screen added

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -422,6 +422,7 @@
     },
     "settings": {
         "title": "Settings",
+        "appSettings": "App Settings",
         "account": "Account",
         "preferences": "Preferences",
         "support": "Support",
