--- a/src/i18n/locales/ur.json
+++ b/src/i18n/locales/ur.json
@@ -422,6 +422,7 @@
     },
     "settings": {
         "title": "ترتیبات",
+        "appSettings": "ایپ کی ترتیبات",
         "account": "اکاؤنٹ",
         "preferences": "ترجیحات",
         "support": "مدد",
