refactor: removed tag zustand store and  migrate tag operations to use `tagService` with WatermelonDB observables.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -24,7 +24,8 @@
         "submit": "Submit",
         "yes": "Yes",
         "no": "No",
-        "others": "Others"
+        "others": "Others",
+        "userNotAuthenticated": "User not authenticated"
     },
     "auth": {
         "welcome": "Welcome to HisaabBee",
